house-bank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-bank-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: house-bank.test
      http:
        paths:
          - path: /usr(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-endpoint-service
                port:
                  number: 8004
          - path: /prp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: property-endpoint-service
                port:
                  number: 8002
          - path: /txn(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: transaction-endpoint-service
                port:
                  number: 8003
          - path: /prw(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: property-reviews-endpoint-service
                port:
                  number: 8005
